# Vecternary-App

./: .gitignore  Data-Structure-Experiment.pseudocode  Ideas.org  Plan-of-Action.md  Project-Tasklist.org  README.md  TODO.txt  clear-ds-store.sh
Vecternary-Picasso/: DEVELOP.md  Makefile  README.md  app.js  appmenu.json  index.html  tailwind.config.js
Vecternary-Picasso/app/: Cargo.toml  Makefile  README_app.md  icon.icns
Vecternary-Picasso/app/src/: index.html  main.rs
Vecternary-Picasso/assets/: generate-icns.py
Vecternary-Picasso/css/raw/: tailwind.css
Vecternary-Picasso/doc/: javascript-info.html
Vecternary-Picasso/libs/: appmenus.js  apputils.js  colorutils.js  logging.js  min-polyfills.js  onselect.js  range-slider.js  resize.js  toasts.js
Vecternary-Picasso/libs/debug/: debug.js
Vecternary-Picasso/scripts/: appmenus.js  errorhandler.js  resize.js  undo-redo.js
Vecternary-Picasso/vbundler/: README_bundler.md
Vecternary-Picasso/vfmt/: README.md
Vecternary-Picasso/vlint/: README_vlint.md
Vecternary-Picasso/vrench/: README.md
Vecternary-Picasso/vtools/: README.md
lab/menubar-js/: fixed.html  original.html  temporary-idea.js
